# py-rcsb_utils_insilico3d

./: .gitignore  .gitmodules  HISTORY.txt  MANIFEST.in  README.md  azure-pipelines.yml  azure-template-publish-job.yml  azure-template-tox-job.yml  pylintrc  pyproject.toml  requirements.txt  setup.py  tox.ini
rcsb/utils/insilico3d/: AlphaFoldModelCloudProvider.py  AlphaFoldModelMetadataProvider.py  AlphaFoldModelProvider.py  AlphaFoldModelWorkflow.py  ModBaseModelProcessor.py  ModBaseModelProvider.py  ModBaseModelWorkflow.py  ModelArchiveModelProvider.py  ModelCacheProvider.py  ModelHoldingsProvider.py  ModelProcessors.py  ModelProviderWorkflow.py  ModelReorganizer.py  SwissModelPdbToCifConverter.py  SwissModelProcessor.py  SwissModelProvider.py  __init__.py
rcsb/utils/insilico3d/scripts/: fetchFromGcloud.sh  generateCloudCacheFile.py  mergeHoldingsFiles.py  removePAEFiles.py  runAlphaFoldCloudReorganizingWorkflow.py  runAlphaFoldFtpProviderWorkflow.py  runAlphaFoldModelCloudProviderWorkflow.py  runModelArchiveProviderWorkflow.py  runModelProviderWorkflow.py
rcsb/utils/tests-insilico3d/: ModBaseModelProcessor.py  ModBaseModelProvider.py  runModelProviderWorkflow.py  testAlphaFoldModelCloudProvider.py  testAlphaFoldModelProvider.py  testModBaseModelProcessor.py  testModBaseModelProvider.py  testModelArchiveModelProvider.py  testModelCacheProvider.py  testModelHoldingsProvider.py  testModelProviderWorkflow.py  testSwissModelProcessor.py  testSwissModelProvider.py
rcsb/utils/tests-insilico3d/test-data/: computed-models-holdings-list.json
rcsb/utils/tests-insilico3d/test-data/AlphaFold/: species-model-data.json
rcsb/utils/tests-insilico3d/test-data/ModBase/Panicum_virgatum/alignment/: XP_039771078.1_2.ali.xml.xz  XP_039771079.1_2.ali.xml.xz  XP_039771079.1_3.ali.xml.xz  XP_039771083.1_2.ali.xml.xz  XP_039771084.1_1.ali.xml.xz  XP_039771090.1_1.ali.xml.xz
rcsb/utils/tests-insilico3d/test-data/ModBase/Panicum_virgatum/model/: XP_039771078.1_2.pdb.xz  XP_039771079.1_2.pdb.xz  XP_039771079.1_3.pdb.xz  XP_039771083.1_2.pdb.xz  XP_039771084.1_1.pdb.xz  XP_039771090.1_1.pdb.xz
