[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rcsb.utils.insilico3d"
description = "RCSB Python In Silico Model Access Utilities"
version = "0.43"
readme = "README.md"
authors = [
    { name="Dennis Piehl", email="dennis.piehl@rcsb.org" }
]
maintainers = [
    { name="Dennis Piehl", email="dennis.piehl@rcsb.org" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "rcsb.utils.io >= 1.52",
    "rcsb.utils.multiproc >= 0.21",
    "asyncio >= 3.4.3",
    "aiohttp >= 3.12.7",
    "aiofiles >= 24.1.0",
]

[project.optional-dependencies]
cloud = [
    "gsutil >= 5.14",
    "google-cloud-storage >= 2.5.0",
]
tests = ["tox", "pylint", "black>=21.5b1", "flake8", "coverage", "check-manifest", "rcsb.utils.config>=0.40"]

[project.urls]
Homepage = "https://github.com/rcsb/py-rcsb_utils_insilico3d"

# ----------------  hatch configuration ----------------
[tool.hatch.build.targets.sdist]
include = [
    "/rcsb/**",
    "/README.md",
    "/LICENSE",
    "/HISTORY.txt",
    "/pyproject.toml",
]
exclude = [
    "/rcsb/utils/test*/test*-*",
    "/rcsb/mock-*",
]

[tool.hatch.build.targets.wheel]
packages = ["rcsb"]
exclude = [
    "/rcsb/utils/test*",
    "/rcsb/mock-*",
    "/rcsb/utils/insilico3d/scripts*",
]

[tool.hatch.envs.default]
skip-install = true

# ----------------  test configuration ----------------
[tool.hatch.envs.hatch-test]
dependencies = ["tox"]

[tool.hatch.envs.hatch-test.scripts]
run = ["tox"]

# ----------------  UV configuration ----------------
# Add this to prevent uv from automatically creating venvs within individual packages when running 'uv run ...' from within the package directory
[tool.uv]
managed = false
